GNOME Bugzilla – Bug 662870
Fix introspection annotations for GtkRadioToolButton
Last modified: 2011-10-28 16:43:54 UTC
Currently, it's pretty much broken, which is a shame, because GtkRadioButton works fine.
Created attachment 200125 [details] [review] radiotoolbutton: Fix the annotation for get_group() Use the same annotation used by gtk_radio_button_get_group().
Created attachment 200126 [details] [review] radiotoolbutton: Fix the introspection annotations Everything that deals with a group has to be fixed. Plus, we have NULL checks without allowing NULL arguments; since NULL arguments are perfectly fine, we can relax the argument checks.
Review of attachment 200125 [details] [review]: sure
Review of attachment 200126 [details] [review]: Looks fine
Attachment 200125 [details] pushed as 931a408 - radiotoolbutton: Fix the annotation for get_group() Attachment 200126 [details] pushed as a77162e - radiotoolbutton: Fix the introspection annotations