radiotoolbutton: Fix the annotation for get_group()

Use the same annotation used by gtk_radio_button_get_group().

https://bugzilla.gnome.org/show_bug.cgi?id=662870